--- a/src/notes.html
+++ b/src/notes.html
@@ -2,7 +2,7 @@
 <html ng-app="notesApp" ng-controller="initNotes">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Notes</title>
+    <title ng-bind-template="{{ title }}"></title>
     <link rel="stylesheet" href="notes.css">
 
     <script src="../node_modules/underscore/underscore-min.js"></script>
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="note-app">
-        <h1>Notes</h1>
+        <h1>{{ title }}</h1>
         <ul class="note-list">
             <li class="note-item note-header">
                 <input type="text" placeholder="Enter text to search or title to create" class="note-input" ng-model="inputText" ng-change="fetchNotes()">
@@ -20,12 +20,12 @@
             </li>
             <li class="note-item" ng-repeat="note in notes">
                 <span class="note-title-text">{{ note.title }}</span>
-                <input type="text" ng-model="note.title" class="note-title-edit" ng-change="saveNote(note)">
+                <input type="text" ng-model="note.title" class="note-title-edit" placeholder="Note title" ng-change="saveNote(note)">
                 <span class="note-datetime-text">{{ note.datetime }}</span>
                 <input type="button" value="Delete" class="note-delete-button" ng-click="deleteNote(note)">
 
                 <span class="note-content-text">{{ note.content }}</span>
-                <textarea class="note-content-edit" ng-model="note.content" ng-change="saveNote(note)"></textarea>
+                <textarea class="note-content-edit" placeholder="Note content" ng-model="note.content" ng-change="saveNote(note)"></textarea>
             </li>
         </ul>
     </div>
