--- a/src/notes.html
+++ b/src/notes.html
@@ -3,14 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title ng-bind-template="{{ title }}"></title>
-    <link rel="stylesheet" href="notes.css">
+    <link rel="stylesheet" href="view/notes.css">
 
     <script src="../node_modules/angular/angular.min.js"></script>
-    <script src="js/note.js"></script>
-    <script src="js/notes.js"></script>
-    <script src="js/persistence.js"></script>
-    <script src="js/controller.js"></script>
-    <script src="js/filter.js"></script>
+    <script src="model/note.js"></script>
+    <script src="model/notes.js"></script>
+    <script src="model/persistence.js"></script>
+    <script src="controller.js"></script>
+    <script src="view/filter.js"></script>
 </head>
 <body>
     <div class="note-app">
