--- a/test/test.html
+++ b/test/test.html
@@ -13,13 +13,14 @@
     <script src="../src/model/persistence.js"></script>
 
     <script>
+        var expect = chai.expect;
         mocha.setup("bdd");
 
         window.onload = function () {
             mocha.run();
         }
     </script>
-    <script src="test.js"></script>
+    <script src="note.spec.js"></script>
 </head>
 <body>
     <div id="mocha"></div>
