--- a/test/test.html
+++ b/test/test.html
@@ -21,6 +21,8 @@
         }
     </script>
     <script src="note.spec.js"></script>
+    <script src="notes.spec.js"></script>
+    <script src="persistence.spec.js"></script>
 </head>
 <body>
     <div id="mocha"></div>
