move to spec folder

--- a/test/test.html
+++ b/test/test.html
@@ -20,9 +20,9 @@
             mocha.run();
         }
     </script>
-    <script src="note.spec.js"></script>
-    <script src="notes.spec.js"></script>
-    <script src="persistence.spec.js"></script>
+    <script src="spec/note.spec.js"></script>
+    <script src="spec/notes.spec.js"></script>
+    <script src="spec/persistence.spec.js"></script>
 </head>
 <body>
     <div id="mocha"></div>
