--- a/src/notes.html
+++ b/src/notes.html
@@ -6,13 +6,13 @@
 
     <script src="../node_modules/angular/angular.min.js"></script>
 
-    <!-- build:[href]:dist notes.min.css -->
+    <!-- build:css notes.min.css -->
     <link rel="stylesheet" href="notes.css">
-    <!-- /build -->
+    <!-- endbuild -->
 
-    <!-- build:[src]:dist notes.min.js -->
+    <!-- build:js notes.min.js -->
     <script src="notes.js"></script>
-    <!-- /build -->
+    <!-- endbuild -->
 </head>
 <body>
     <div class="note-app">
